@@ -36,6 +36,7 @@
 * Checkout: Fix for `[:source][:stored]` in stored credentials [marioarranzr] #4629
 * Mundipagg: send authorization_secret_key on all transaction types [edgarv09] #4635
 * CommerceHub: Add new gateway [naashton] #4640
+* CyberSource: Update installment data method [rachelkirk] #4642
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
